@startuml

skinparam monochrome true

class Configuration {
    pushGatewayUrl: string
    scrapeTargets: []ScrapeTarget

}

class ScrapeTarget {
    url: string
    basicAuth: BasicAuth
    mimeType: string
    jobName: string
    timeoutInSecs: int
    metrics: []Metric
    labels: []Label
}

Configuration -- ScrapeTarget

class BasicAuth {
    username: string
    password: string
}

ScrapeTarget -- BasicAuth

class Metric {
    name: string
    help: string
    path: string
    instrumentType: string
}

ScrapeTarget -- Metric

class Label {
    name: string
    value: string
}

ScrapeTarget -- Label

@enduml
